- Added support to kibana image with built-in configurations - Allow kibana configuration for dashboard flavours through environmental variables - Enable changing readonlyrest plugin credentials in docker-compose file

--- a/docker/docker-compose-build.yml
+++ b/docker/docker-compose-build.yml
@@ -19,3 +19,8 @@ services:
     build:
       context: ./elasticsearch
     image: inspiremif/elasticsearch:latest
+
+  kibana:
+    build:
+      context: ./kibana
+    image: inspiremif/kibana:latest
