--- a/docker/docker-compose-eea-dashboard-official.yml
+++ b/docker/docker-compose-eea-dashboard-official.yml
@@ -36,8 +36,9 @@ services:
     container_name: official-cerebro
 
   kibana:
-    volumes:
-      - ${PWD}/kibana/config/kibana-official.yml:/usr/share/kibana/config/kibana.yml
+    environment:
+      - REGIONMAP_LAYERS_URL=/official/assets/data/europe.geojson
+      - SERVER_BASEPATH=official
     networks:
       - network-dashboard-official
     container_name: official-kibana
