- added cerebro image with built-in configuration - enabled password configuration of cerebro on docker-compose

--- a/docker/docker-compose-build.yml
+++ b/docker/docker-compose-build.yml
@@ -24,3 +24,8 @@ services:
     build:
       context: ./kibana
     image: inspiremif/kibana:latest
+
+  cerebro:
+    build:
+      context: ./cerebro
+    image: inspiremif/cerebro:latest
