- changed kibana generated configuration files on pom,xml - added support to setting readonly kibana_rw username and password and kibana_srv password on docker-compose

--- a/dashboards/pom.xml
+++ b/dashboards/pom.xml
@@ -110,7 +110,7 @@
               <target>
                 <echo>Rename kibana config for this webapp in docker build context.</echo>
                 <move file="${project.basedir}/../docker/kibana/config/kibana.yml"
-                      tofile="${project.basedir}/../docker/kibana/config/kibana-${war.name}.yml"/>
+                      tofile="${project.basedir}/../docker/kibana/config/kibana.yml"/>
               </target>
             </configuration>
           </execution>
