--- a/es/config/readonlyrest.yml
+++ b/es/config/readonlyrest.yml
@@ -87,7 +87,7 @@ readonlyrest:
 
   users:
 
-  - username: kibana_rw
+  - username: ${kb.es.rw.username}
     auth_key: ${kb.es.rw.username}:${kb.es.rw.password}
     groups: ["kibana_rw"]
 
@@ -97,5 +97,5 @@ readonlyrest:
 
   - username: kibana_server
     # auth_key is good for testing, but replace it with `auth_key_sha256`!
-    auth_key: ${kb.es.serverusername}:${kb.es.serverpassword}
+    auth_key: kibana_server:${kb.es.serverpassword}
     groups: ["kibana_srv"]
