- added privileged container, just to set vm.max_map_count on the host - removed vm.max_map_count from run scripts - updated README

--- a/docker/docker-compose-canonical.yml
+++ b/docker/docker-compose-canonical.yml
@@ -99,3 +99,11 @@ services:
         - SSL_PRIV
     restart: always
     command: ["sh", "./entry-point.sh"]
+
+  sysctl:
+    network_mode: none
+    image: rawmind/alpine-sysctl:0.1
+    privileged: true
+    environment:
+      - "SYSCTL_KEY=vm.max_map_count"
+      - "SYSCTL_VALUE=262144"
