- set explicit name to sysctl container

--- a/docker/docker-compose-eea-dashboard-official.yml
+++ b/docker/docker-compose-eea-dashboard-official.yml
@@ -51,6 +51,9 @@ services:
       - network-dashboard-official
     container_name: official-nginx
 
+  sysctl:
+    container_name: official-sysctl
+
 volumes:
     esdata-official:
        driver: local
