--- a/docker/docker-compose-build.yml
+++ b/docker/docker-compose-build.yml
@@ -29,3 +29,11 @@ services:
     build:
       context: ./cerebro
     image: inspiremif/cerebro:latest
+
+  sysctl:
+    network_mode: none
+    image: rawmind/alpine-sysctl:0.1
+    privileged: true
+    environment:
+      - "SYSCTL_KEY=vm.max_map_count"
+      - "SYSCTL_VALUE=262144"
