--- a/docker/kibana/config/kibana.yml
+++ b/docker/kibana/config/kibana.yml
@@ -31,5 +31,5 @@ server.ssl.certificate: /etc/pki/tls/certs/server.crt
 server.ssl.key: /etc/pki/tls/private/server.key
 #elasticsearch.ssl.certificateAuthorities: [ "/path/to/your/ca/cacert.pem" ]
 
-elasticsearch.username: USERNAME
+elasticsearch.username: kibana_server
 elasticsearch.password: PASSWORD
