- set dashboard applications to run on the root of tomcat

--- a/dashboards/config_local/kibana.yml
+++ b/dashboards/config_local/kibana.yml
@@ -1,7 +1,7 @@
 server.name: kibana
 #server.host: "0"
 
-server.basePath: "${webapp.rootUrl}dashboard"
+#server.basePath: "${webapp.rootUrl}dashboard"
 
 kibana.index: "${es.index.dashboards}"
 
