--- a/docker/nginx/nginx-ssl.conf
+++ b/docker/nginx/nginx-ssl.conf
@@ -36,7 +36,8 @@ http {
     ssl_certificate /etc/nginx/certs/cert.crt;
     ssl_certificate_key /etc/nginx/private/priv.key;
 
-    location /daobs {
+    location / { 
+	#dashboard application on the root
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto https;
@@ -45,32 +46,8 @@ http {
         proxy_send_timeout         240;
         proxy_read_timeout         240;
         # note, there is not SSL here! plain HTTP is used
-        proxy_pass http://dashboard:8080/daobs;
-        proxy_redirect http://dashboard:8080/daobs /daobs;
-    }
-    location /dashboard {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_redirect off;
-        proxy_connect_timeout      240;
-        proxy_send_timeout         240;
-        proxy_read_timeout         240;
-        # note, there is not SSL here! plain HTTP is used
-        proxy_pass http://dashboard:8080/dashboard;
-        proxy_redirect http://dashboard:8080/dashboard /dashboard;
-    }
-    location /official {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_redirect off;
-        proxy_connect_timeout      240;
-        proxy_send_timeout         240;
-        proxy_read_timeout         240;
-        # note, there is not SSL here! plain HTTP is used
-        proxy_pass http://dashboard:8080/official;
-        proxy_redirect http://dashboard:8080/official /official;
+        proxy_pass DASHBOARD_URL;
+        proxy_redirect DASHBOARD_URL /;
     }
 
 #    location /health {
