-  remove x-pack on the Dockerfile to avoid this action on restarts

--- a/docker/kibana/Dockerfile
+++ b/docker/kibana/Dockerfile
@@ -14,3 +14,6 @@ RUN chown kibana /kibana.yml
 RUN chown kibana /usr/share/kibana/config/kibana.yml
 
 USER kibana
+
+RUN /usr/share/kibana/bin/kibana-plugin remove x-pack
+
