- added nginx image with built in configurations

--- a/docker/docker-compose-build.yml
+++ b/docker/docker-compose-build.yml
@@ -25,6 +25,11 @@ services:
       context: ./kibana
     image: inspiremif/kibana:latest
 
+  nginx:
+    build:
+      context: ./nginx
+    image: inspiremif/nginx:latest
+
   cerebro:
     build:
       context: ./cerebro
