- fixed webapp.url to run application on root - added server.basePath to kibana configuration

--- a/docker/kibana/config/kibana.yml
+++ b/docker/kibana/config/kibana.yml
@@ -1,7 +1,7 @@
 server.name: kibana
 server.host: "0"
 
-#server.basePath: "/dashboard"
+server.basePath: "/dashboard"
 
 kibana.index: ".dashboards"
 
