- Added support for setting the dashboard credentials on docker-compose file - Fixed nginx bash script, to generate certificates when variable GENERATESSL it is set to 'YES'

--- a/docker/docker-compose-canonical.yml
+++ b/docker/docker-compose-canonical.yml
@@ -6,6 +6,7 @@ services:
       - "kibana"
     environment:
       - PASSWORD=changeme # n.b.: needs to match the credentials on kibana
+      - ADMINPASSWORD=changeme
     restart: always
     command: ["bash", "/wait-for-it.sh", "kibana:5601", "-t", "0", "--", "/docker-entry.sh"]
 
