--- a/docker/elasticsearch/config/readonlyrest.yml
+++ b/docker/elasticsearch/config/readonlyrest.yml
@@ -87,8 +87,8 @@ readonlyrest:
 
   users:
 
-  - username: USERNAME
-    auth_key: USERNAME:PASSWORD
+  - username: KIBANA_RW_USER
+    auth_key: KIBANA_RW_USER:KIBANA_RW_PASSWORD
     groups: ["kibana_rw"]
 
 #  - username: kibana_ro
@@ -97,5 +97,5 @@ readonlyrest:
 
   - username: kibana_server
     # auth_key is good for testing, but replace it with `auth_key_sha256`!
-    auth_key: kibana_server:PASSWORD
+    auth_key: kibana_server:KIBANA_SRV_PASSWORD
     groups: ["kibana_srv"]
