--- a/logging-deps/pom.xml
+++ b/logging-deps/pom.xml
@@ -38,7 +38,7 @@
 
   <properties>
     <slf4j.version>1.7.7</slf4j.version>
-    <log4j.version>2.7</log4j.version>
+    <log4j.version>2.8.2</log4j.version>
   </properties>
 
   <build>
@@ -77,6 +77,11 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
+      <version>${log4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-to-slf4j</artifactId>
       <version>${log4j.version}</version>
     </dependency>
   </dependencies>
