- proxified http://[es-url]:9200/_cat/health, at 127.0.0.1/health

--- a/docker/docker-compose-eea-dashboard-sandbox.yml
+++ b/docker/docker-compose-eea-dashboard-sandbox.yml
@@ -46,6 +46,7 @@ services:
       - "444:443"
     environment:
       - DASHBOARD_URL=http://dashboard:8080
+      - ES_URL=http://sandbox-es0:9200
     networks:
       - network-dashboard-sandbox
     container_name: sandbox-nginx
