--- a/docker/docker-compose-eea-dashboard-official.yml
+++ b/docker/docker-compose-eea-dashboard-official.yml
@@ -49,6 +49,7 @@ services:
       - "443:443"
     environment:
       - DASHBOARD_URL=http://dashboard:8080
+      - ES_URL=http://official-es0:9200
     networks:
       - network-dashboard-official
     container_name: official-nginx
