--- a/docker/nginx/nginx-ssl.conf
+++ b/docker/nginx/nginx-ssl.conf
@@ -36,7 +36,7 @@ http {
     ssl_certificate /etc/nginx/certs/cert.crt;
     ssl_certificate_key /etc/nginx/private/priv.key;
 
-    location / { 
+    location / {
 	#dashboard application on the root
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
@@ -50,17 +50,17 @@ http {
         proxy_redirect DASHBOARD_URL /;
     }
 
-#    location /health {
-#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#        proxy_set_header Host $http_host;
-#        proxy_set_header X-Forwarded-Proto https;
-#        proxy_redirect off;
-#        proxy_connect_timeout      240;
-#        proxy_send_timeout         240;
-#        proxy_read_timeout         240;
+    location /health/ {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_redirect off;
+        proxy_connect_timeout      240;
+        proxy_send_timeout         240;
+        proxy_read_timeout         240;
         # note, there is not SSL here! plain HTTP is used
-#        proxy_pass http://cerebro:9000;
-#        proxy_redirect http://cerebro:9000 /health;
-#    }
+        proxy_pass ES_URL/_cat/health;
+        proxy_redirect ES_URL/_cat/health /health;
+    }
   }
 }
