--- a/docker/cerebro/Dockerfile
+++ b/docker/cerebro/Dockerfile
@@ -4,5 +4,6 @@ MAINTAINER doublebyte <joana.simoes@geocat.net>
 
 COPY ./config/application.conf /opt/cerebro/conf/application.conf
 COPY ./docker-entrypoint.sh /docker-entrypoint.sh
+ADD ./VERSION .
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
