--- a/docker/elasticsearch/Dockerfile
+++ b/docker/elasticsearch/Dockerfile
@@ -16,6 +16,7 @@ RUN chmod a+x /docker-entrypoint.sh
 RUN yum install -y openssl
 USER elasticsearch
 
-#EXPOSE 9200 9300
+ADD ./VERSION .
+
 ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["elasticsearch"]
