--- a/docker/kibana/Dockerfile
+++ b/docker/kibana/Dockerfile
@@ -14,6 +14,7 @@ RUN chown kibana /kibana.yml
 RUN chown kibana /usr/share/kibana/config/kibana.yml
 
 USER kibana
+ADD ./VERSION .
 
 RUN /usr/share/kibana/bin/kibana-plugin remove x-pack
 
