--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -4,3 +4,5 @@ MAINTAINER doublebyte <joana.simoes@geocat.net>
 
 COPY ./nginx-ssl.conf /nginx.conf
 COPY ./entry-point.sh /entry-point.sh
+ADD ./VERSION .
+
