- building dashboard images, right after the compilation - using unique password for readonlyrest (reused for KIBANA_RW and kibana_SRV) - readonlyrest usernames set on the pom: admin for KIBANA_RW and kibana_server for KIBANA_SRV - enable visitors - fixed KIBANA_RW group to have rw access to the index

--- a/pom.xml
+++ b/pom.xml
@@ -693,8 +693,8 @@ node.data: NODE_DATA
 node.master: NODE_MASTER]]></es.single-node.discovery>
         <es.network.host>192.168.1.10</es.network.host>
         <kb.host>kibana</kb.host>
-        <kb.es.rw.username>KIBANA_RW_USER</kb.es.rw.username>
-        <kb.es.rw.password>KIBANA_RW_PASSWORD</kb.es.rw.password>
+        <kb.es.rw.username>admin</kb.es.rw.username>
+        <kb.es.rw.password>KIBANA_SRV_PASSWORD</kb.es.rw.password>
         <kb.es.serverusername>kibana_server</kb.es.serverusername>
         <kb.es.serverpassword>KIBANA_SRV_PASSWORD</kb.es.serverpassword>
       </properties>
@@ -721,8 +721,8 @@ node.data: NODE_DATA
 node.master: NODE_MASTER]]></es.single-node.discovery>
         <es.network.host>192.168.1.10</es.network.host>
         <kb.host>kibana</kb.host>
-        <kb.es.rw.username>KIBANA_RW_USER</kb.es.rw.username>
-        <kb.es.rw.password>KIBANA_RW_PASSWORD</kb.es.rw.password>
+        <kb.es.rw.username>admin</kb.es.rw.username>
+        <kb.es.rw.password>KIBANA_SRV_PASSWORD</kb.es.rw.password>
         <kb.es.serverusername>kibana_server</kb.es.serverusername>
         <kb.es.serverpassword>KIBANA_SRV_PASSWORD</kb.es.serverpassword>
       </properties>
