--- a/docker/elasticsearch/config/readonlyrest.yml
+++ b/docker/elasticsearch/config/readonlyrest.yml
@@ -55,7 +55,7 @@ readonlyrest:
     groups: ["kibana_rw"]
     # This is required to drop index pattern
     actions: ["indices:data/*", "indices:admin/*", "indices:monitor/*"]
-#    kibana_access: rw
+    kibana_access: rw
     kibana_index: .dashboards
     verbosity: error
 
@@ -87,13 +87,13 @@ readonlyrest:
 
   users:
 
-  - username: KIBANA_RW_USER
-    auth_key: KIBANA_RW_USER:KIBANA_RW_PASSWORD
+  - username: admin
+    auth_key: admin:KIBANA_SRV_PASSWORD
     groups: ["kibana_rw"]
 
-#  - username: kibana_ro
-#    auth_key: visitor:dXQTptnvrCBrrNnGj
-#    groups: ["kibana_ro"]
+  - username: kibana_ro
+    auth_key: visitor:dXQTptnvrCBrrNnGj
+    groups: ["kibana_ro"]
 
   - username: kibana_server
     # auth_key is good for testing, but replace it with `auth_key_sha256`!
