--- a/es/config/readonlyrest.yml
+++ b/es/config/readonlyrest.yml
@@ -55,7 +55,7 @@ readonlyrest:
     groups: ["kibana_rw"]
     # This is required to drop index pattern
     actions: ["indices:data/*", "indices:admin/*", "indices:monitor/*"]
-#    kibana_access: rw
+    kibana_access: rw
     kibana_index: ${es.index.dashboards}
     verbosity: error
 
@@ -91,9 +91,9 @@ readonlyrest:
     auth_key: ${kb.es.rw.username}:${kb.es.rw.password}
     groups: ["kibana_rw"]
 
-#  - username: kibana_ro
-#    auth_key: ${kb.es.ro.username}:${kb.es.ro.password}
-#    groups: ["kibana_ro"]
+  - username: kibana_ro
+    auth_key: ${kb.es.ro.username}:${kb.es.ro.password}
+    groups: ["kibana_ro"]
 
   - username: kibana_server
     # auth_key is good for testing, but replace it with `auth_key_sha256`!
