- moved to es 5.6.7

--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,4 @@ dashboards/kibana-*
 docker/*.war
 docker/ETF
 docker/datadir
-docker/elasticsearch/readonlyrest*
+#docker/elasticsearch/readonlyrest*
