Rework the service/dataset link analyzer. Add the possibility to reanalyze them from the UI.

--- a/tasks/service-dataset-indexer/pom.xml
+++ b/tasks/service-dataset-indexer/pom.xml
@@ -74,6 +74,12 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.daobs</groupId>
+      <artifactId>daobs-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
