--- a/tasks/service-dataset-indexer/src/main/resources/config.properties
+++ b/tasks/service-dataset-indexer/src/main/resources/config.properties
@@ -36,7 +36,7 @@ task.service-dataset-indexer.startup.cli=true
 # Start the task when a JMS message is sent to the queue
 task.service-dataset-indexer.startup.jms=false
 # The field to return in the response
-task.service-dataset-indexer.fields="id", "recordOperateOn", "serviceType", "harvesterId"
+task.service-dataset-indexer.fields="id", "recordOperateOn", "serviceType", "harvesterId", "inspireTheme"
 # The task folder is polled at regular interval to index
 # any associations found.
 task.service-dataset-indexer.folder=${data.dir}/service-dataset-indexer_data/tasks
