--- a/tasks/validation-checker/pom.xml
+++ b/tasks/validation-checker/pom.xml
@@ -76,6 +76,11 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
+      <version>4.4.5</version>
+    </dependency>
   </dependencies>
 
   <build>
