Turn off proxy log.

--- a/web/src/main/webResources/WEB-INF/web.xml
+++ b/web/src/main/webResources/WEB-INF/web.xml
@@ -72,7 +72,7 @@
     </init-param>
     <init-param>
       <param-name>log</param-name>
-      <param-value>true</param-value>
+      <param-value>false</param-value>
     </init-param>
   </servlet>
   <servlet-mapping>
@@ -89,7 +89,7 @@
     </init-param>
     <init-param>
       <param-name>log</param-name>
-      <param-value>true</param-value>
+      <param-value>false</param-value>
     </init-param>
   </servlet>
   <servlet-mapping>
@@ -107,7 +107,7 @@
     </init-param>
     <init-param>
       <param-name>log</param-name>
-      <param-value>true</param-value>
+      <param-value>false</param-value>
     </init-param>
   </servlet>
   <servlet-mapping>
