- reusing the same set of credentials for the dashboard application and elasticsearch (admin, ADMINPASSWORD)

--- a/docker/elasticsearch/config/readonlyrest.yml
+++ b/docker/elasticsearch/config/readonlyrest.yml
@@ -87,15 +87,15 @@ readonlyrest:
 
   users:
 
-  - username: admin
-    auth_key: admin:KIBANA_SRV_PASSWORD
+  - username: kibana_rw
+    auth_key: kibana_rw:KIBANA_SRV_PASSWORD
     groups: ["kibana_rw"]
 
   - username: kibana_ro
     auth_key: visitor:dXQTptnvrCBrrNnGj
     groups: ["kibana_ro"]
 
-  - username: kibana_server
+  - username: admin
     # auth_key is good for testing, but replace it with `auth_key_sha256`!
-    auth_key: kibana_server:KIBANA_SRV_PASSWORD
+    auth_key: admin:KIBANA_SRV_PASSWORD
     groups: ["kibana_srv"]
