--- a/docker/docker-compose-canonical.yml
+++ b/docker/docker-compose-canonical.yml
@@ -5,8 +5,8 @@ services:
     depends_on:
       - "kibana"
     environment:
-      - KIBANA_SRV_PASSWORD=changeme # n.b.: must match the password on elasticsearch
-      - ADMINPASSWORD=changeme
+      #- KIBANA_SRV_PASSWORD=test # n.b.: must match the password on elasticsearch
+      - ADMINPASSWORD=changeme # n.b.: must match the password on elasticsearch
     restart: always
     command: ["bash", "/wait-for-it.sh", "kibana:5601", "-t", "0", "--", "/docker-entry.sh"]
 
@@ -24,7 +24,8 @@ services:
       - NODE_MASTER=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - ELASTICSEARCH_MASTER=YES
-      - KIBANA_SRV_PASSWORD=changeme
+      #- KIBANA_SRV_PASSWORD=changeme
+      - ADMINPASSWORD=changeme
     restart: always
 
   elasticsearch-node1:
@@ -77,7 +78,8 @@ services:
   kibana:
     image: inspiremif/kibana:latest
     environment:
-      - KIBANA_SRV_PASSWORD=changeme # n.b.: must match the password on elasticsearch
+      #- KIBANA_SRV_PASSWORD=changeme # n.b.: must match the password on elasticsearch
+      - ADMINPASSWORD=changeme # n.b.: must match the password on elasticsearch
     depends_on:
       - "elasticsearch"
     restart: always
