Revert "- reusing the same set of credentials for the dashboard application and elasticsearch (admin, ADMINPASSWORD)"
This reverts commit 287f52b4a572fd9d22e599d1563da55cc5853b04.

--- a/docker/docker-compose-canonical.yml
+++ b/docker/docker-compose-canonical.yml
@@ -5,8 +5,8 @@ services:
     depends_on:
       - "kibana"
     environment:
-      #- KIBANA_SRV_PASSWORD=test # n.b.: must match the password on elasticsearch
-      - ADMINPASSWORD=changeme # n.b.: must match the password on elasticsearch
+      - KIBANA_SRV_PASSWORD=changeme # n.b.: must match the password on elasticsearch
+      - ADMINPASSWORD=changeme
     restart: always
     command: ["bash", "/wait-for-it.sh", "kibana:5601", "-t", "0", "--", "/docker-entry.sh"]
 
@@ -24,8 +24,7 @@ services:
       - NODE_MASTER=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - ELASTICSEARCH_MASTER=YES
-      #- KIBANA_SRV_PASSWORD=changeme
-      - ADMINPASSWORD=changeme
+      - KIBANA_SRV_PASSWORD=changeme
     restart: always
 
   elasticsearch-node1:
@@ -78,8 +77,7 @@ services:
   kibana:
     image: inspiremif/kibana:latest
     environment:
-      #- KIBANA_SRV_PASSWORD=changeme # n.b.: must match the password on elasticsearch
-      - ADMINPASSWORD=changeme # n.b.: must match the password on elasticsearch
+      - KIBANA_SRV_PASSWORD=changeme # n.b.: must match the password on elasticsearch
     depends_on:
       - "elasticsearch"
     restart: always
