--- a/docker/elasticsearch/config/readonlyrest.yml
+++ b/docker/elasticsearch/config/readonlyrest.yml
@@ -95,7 +95,7 @@ readonlyrest:
     auth_key: visitor:dXQTptnvrCBrrNnGj
     groups: ["kibana_ro"]
 
-  - username: KIBANA_SRV_PASSWORD
+  - username: kibana_server
     # auth_key is good for testing, but replace it with `auth_key_sha256`!
-    auth_key: KIBANA_SRV_PASSWORD:KIBANA_SRV_PASSWORD
+    auth_key: kibana_server:KIBANA_SRV_PASSWORD
     groups: ["kibana_srv"]
