--- a/docker/nginx/nginx-ssl.conf
+++ b/docker/nginx/nginx-ssl.conf
@@ -45,6 +45,7 @@ http {
         proxy_connect_timeout      240;
         proxy_send_timeout         240;
         proxy_read_timeout         240;
+        proxy_hide_header X-Frame-Options;
         # note, there is not SSL here! plain HTTP is used
         proxy_pass DASHBOARD_URL;
         proxy_redirect DASHBOARD_URL /;
