--- a/docker/nginx/nginx-ssl.conf
+++ b/docker/nginx/nginx-ssl.conf
@@ -46,6 +46,9 @@ http {
         proxy_send_timeout         240;
         proxy_read_timeout         240;
         proxy_hide_header X-Frame-Options;
+        add_header X-Frame-Options "ALLOW-FROM ALLOWED_DOMAIN";
+        add_header Content-Security-Policy "frame-ancestors ALLOWED_DOMAIN";
+        #proxy_set_header X-Frame-Options "ALLOW-FROM *.ec.europa.eu";
         # note, there is not SSL here! plain HTTP is used
         proxy_pass DASHBOARD_URL;
         proxy_redirect DASHBOARD_URL /;
