--- a/web/src/main/webResources/WEB-INF/datadir/config.properties
+++ b/web/src/main/webResources/WEB-INF/datadir/config.properties
@@ -22,6 +22,7 @@
 data.dir=${data.dir}
 
 reports.dir=${etf.validation-html-reports.path}
+reports.yearlyIndicator=${reports.yearlyIndicator}
 
 reporting.dir=${data.dir}/monitoring/
 
