--- a/docker/elasticsearch/config/readonlyrest.yml
+++ b/docker/elasticsearch/config/readonlyrest.yml
@@ -88,14 +88,14 @@ readonlyrest:
   users:
 
   - username: admin
-    auth_key: admin:ADMINPASSWORD
+    auth_key: admin:admin
     groups: ["kibana_rw"]
 
   - username: visitor
-    auth_key: visitor:dXQTptnvrCBrrNnGj
+    auth_key: visitor:visitor
     groups: ["kibana_ro"]
 
   - username: kibana_server
     # auth_key is good for testing, but replace it with `auth_key_sha256`!
-    auth_key: kibana_server:KIBANA_SRV_PASSWORD
+    auth_key: kibana_server:password
     groups: ["kibana_srv"]
