--- a/web/src/main/webResources/WEB-INF/datadir/config.properties
+++ b/web/src/main/webResources/WEB-INF/datadir/config.properties
@@ -32,6 +32,7 @@ es.host=${es.host}
 es.index.records=${es.index.records}
 es.index.indicators=${es.index.indicators}
 es.index.dashboards=${es.index.dashboards}
+es.scrollSize=${es.scrollSize}
 
 http.proxyHost=${http.proxyHost}
 http.proxyPort=${http.proxyPort}
