--- a/routing-deps/pom.xml
+++ b/routing-deps/pom.xml
@@ -61,17 +61,17 @@
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-core-asl</artifactId>
-      <version>${jackson.version}</version>
+      <version>${codehaus.jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-mapper-asl</artifactId>
-      <version>${jackson.version}</version>
+      <version>${codehaus.jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-jaxrs</artifactId>
-      <version>${jackson.version}</version>
+      <version>${codehaus.jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
