--- a/es/pom.xml
+++ b/es/pom.xml
@@ -106,7 +106,7 @@
                   </url>
                   <unpack>true</unpack>
                   <outputDirectory>${project.basedir}</outputDirectory>
-                  <md5>${es.version.md5}</md5>
+                  <sha512>${es.version.sha512}</sha512>
                 </configuration>
               </execution>
             </executions>
