--- a/pom.xml
+++ b/pom.xml
@@ -542,10 +542,10 @@
     <!-- Define one or more groups allowed for ES authorization -->
     <ldap.groups.allowed>"extranet","extranet-inspire-reporter","extranet-inspire-dashboard"</ldap.groups.allowed>
 
-    <lucene.version>7.3.1</lucene.version>
+    <lucene.version>7.4.0</lucene.version>
 
-    <es.version>6.3.2</es.version>
-    <es.version.md5>bc37871633b4dfa7451a7ad053a4df0e</es.version.md5>
+    <es.version>6.4.2</es.version>
+    <es.version.sha512>23c610a8cd33d4229e8b79b0dc5e1f106e5f186d45c83e9994bb15708d2ce4e763fcb7c9be0f652ebdf12905be7f4ced14e1d8e18f6240dfe5ccb4a064239f86 </es.version.sha512>
     <ror.version>1.16.23_es${es.version}</ror.version>
     <es.port>9200</es.port>
     <es.host>localhost</es.host>
@@ -572,7 +572,7 @@
     <es.scrollSize>100</es.scrollSize>
 
 
-    <kb.version.sha512>35eb97ca2f8d0bd80dc7dcdc5bc03f8ab21d1280d11d892f12eda5a173a951dfe88718d45c94ff0a748bb324e44f243cda0ba314c6dcd249cd960928f7c7b7ea</kb.version.sha512>
+    <kb.version.sha512>b3b422c3bd157e363f528a27f5243f2ee13eba3e3bb22e1a7a9f24ea33f75b864643e297047379dfbef040a0eaa05ed6d998dd2cfe798b9d058f5b3d346f4d1d</kb.version.sha512>
     <kb.protocol>${es.protocol}</kb.protocol>
     <kb.port>5601</kb.port>
     <kb.host>localhost</kb.host>
