--- a/docker/docker-compose-canonical.yml
+++ b/docker/docker-compose-canonical.yml
@@ -37,7 +37,7 @@ services:
       - MINIMUM_MASTER_NODE=2
       - NODE_DATA=true
       - NODE_MASTER=true
-      - DISCOVERY_ZEN="elasticsearch"
+      - DISCOVERY_ZEN="official-es0"
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - ELASTICSEARCH_MASTER=NO
     ulimits:
@@ -56,7 +56,7 @@ services:
       - MINIMUM_MASTER_NODE=2
       - NODE_DATA=true
       - NODE_MASTER=false
-      - DISCOVERY_ZEN="elasticsearch"
+      - DISCOVERY_ZEN="official-es0"
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - ELASTICSEARCH_MASTER=NO
     ulimits:
@@ -65,15 +65,6 @@ services:
         hard: -1
     mem_limit: 1g
     restart: always
-
-  cerebro:
-    image: inspiremif/cerebro:latest
-    depends_on:
-      - "elasticsearch"
-    environment:
-      - SECRET=changeme
-    restart: always
-    container_name: sandbox-cerebro
 
   kibana:
     image: inspiremif/kibana:latest
