--- a/docker/nginx/nginx-ssl.conf
+++ b/docker/nginx/nginx-ssl.conf
@@ -31,8 +31,7 @@ http {
 
     listen 80;
 
-    listen 443;
-    ssl on;
+    listen 443 ssl;
     ssl_certificate /etc/nginx/certs/cert.crt;
     ssl_certificate_key /etc/nginx/private/priv.key;
 
@@ -65,5 +64,30 @@ http {
         proxy_pass ES_URL/_cat/health;
         proxy_redirect ES_URL/_cat/health /health;
     }
+  }
+
+  server {
+      listen 9200;
+      server_name daobses;
+
+      rewrite ^/(.*) /$1 break;
+      proxy_ignore_client_abort on;
+      proxy_redirect ES_URL /;
+      proxy_set_header  X-Real-IP  $remote_addr;
+      proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header  Host $http_host;
+
+      location ~ ^/(.*/(_search|_count|_mget)|_msearch) {
+          limit_except GET POST OPTIONS {
+                  deny  all;
+          }
+          proxy_pass ES_URL;
+      }
+      location / {
+          limit_except GET {
+                  deny  all;
+          }
+          proxy_pass ES_URL;
+      }
   }
 }
