--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM  nginx:stable-alpine
 
 MAINTAINER doublebyte <joana.simoes@geocat.net>
 
-COPY ./nginx-ssl.conf /nginx.conf
+COPY ./nginx.conf /nginx.conf
 COPY ./entry-point.sh /entry-point.sh
 ADD ./VERSION .
 
